Add cookies.txt to .gitignore to avoid committing session cookies

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,7 @@ dist
 *.swp
 *.swo
 *~
+
+# Local cookies file generated during development — contains sensitive session tokens
+# Do not commit
+cookies.txt
