Implement Split-Horizon DNS functionality
- Add DNS proxy server on UDP port 5353
- Implement client subnet-based response differentiation
- Create dedicated split-horizon management UI
- Fix DNS record name resolution for empty record names
- Update test domain from dionipe.local to dionipe.id
- Add comprehensive testing script
- Configure internal/external subnet classification

--- a/split-horizon-config.json
+++ b/split-horizon-config.json
@@ -2,30 +2,20 @@
   "enabled": true,
   "zones": [
     {
-      "name": "dionipe.local",
+      "name": "dionipe.id",
       "internal": [
         {
-          "name": "@",
-          "type": "A",
-          "value": "192.168.203.5"
-        },
-        {
-          "name": "www",
+          "name": "",
           "type": "A",
           "value": "192.168.203.5"
         }
       ],
-      "external": [
-        {
-          "name": "@",
-          "type": "A",
-          "value": "8.8.8.8"
-        }
-      ]
+      "external": []
     }
   ],
   "subnets": {
     "internal": [
+      "127.0.0.1/32",
       "192.168.0.0/16",
       "10.0.0.0/8",
       "172.16.0.0/12"
