--- a/split-horizon-config.json
+++ b/split-horizon-config.json
@@ -11,6 +11,17 @@
         }
       ],
       "external": []
+    },
+    {
+      "name": "dionipe.local",
+      "internal": [
+        {
+          "name": "@",
+          "type": "A",
+          "value": "192.168.1.10"
+        }
+      ],
+      "external": []
     }
   ],
   "subnets": {
